--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.3",
     "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.0"
